# NewsMind

./: .env.example  .gitignore  Makefile  PRODUCTION_DESIGN.md  PROJECT_PLAN.md  README.md  alembic.ini  app.py  index.html  pyproject.toml  run.py  summarizer.py
.github/workflows/: ci.yml
.mypy_cache/3.11/: cache.0.db  cache.0.db-shm  cache.0.db-wal  cache.1.db  cache.1.db-shm  cache.1.db-wal  cache.10.db  cache.10.db-shm  cache.10.db-wal  cache.11.db  cache.11.db-shm  cache.11.db-wal  cache.12.db  cache.12.db-shm  cache.12.db-wal  cache.13.db  cache.13.db-shm  cache.13.db-wal  cache.14.db  cache.14.db-shm  cache.14.db-wal  cache.15.db  cache.15.db-shm  cache.15.db-wal  cache.2.db  cache.2.db-shm  cache.2.db-wal  cache.3.db  cache.3.db-shm  cache.3.db-wal  cache.4.db-shm  cache.4.db-wal  cache.5.db  cache.5.db-shm  cache.5.db-wal  cache.6.db  cache.6.db-shm  cache.6.db-wal  cache.7.db  cache.7.db-shm  (+7 more)
deployment/docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
src/api/: app.py  dependencies.py
src/api/middleware/: metrics.py  rate_limiter.py  request_validator.py  security_headers.py
src/api/routes/: health_routes.py  news_routes.py
src/api/templates/: index.html
src/application/dtos/: news_dto.py  summary_dto.py
src/application/use_cases/: get_top_news.py  search_news.py
src/config/: logging_config.py  settings.py  telemetry.py
src/domain/: exceptions.py
src/domain/entities/: article.py  (+1 more)
src/workers/: celery_app.py
tests/: conftest.py
tests/integration/: conftest.py  test_cache.py  test_database.py
tests/load/: load_test.js
(+29 files in other folders)
